--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,5 +31,6 @@ jobs:
 
       # install dependencies and build the project
       - run: npm install --registry=https://registry.npmjs.org
-      - run: npm run test:cov
+      # run: npm run test:cov
       - run: npm run lint
+      - run: npm run build
